CSS & JS Done !!!

--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <title>Sound Board</title>
 </head>
 <body>
+    <main>
+        <div class="cube">
+            <audio src="./assets/music/action.mp3">Action</audio>
+            <h2>Action</h2>
+        </div>
+        <div class="cube">
+            <audio src="./assets/music/cartoon.mp3">Cartoon</audio>
+            <h2>Cartoon</h2>
+        </div>
+        <div class="cube">
+            <audio src="./assets/music/clap.mp3">Clap</audio>
+            <h2>Clap</h2>
+        </div>
+        <div class="cube">
+            <audio src="./assets/music/rock.mp3">Rock</audio>
+            <h2>Rock</h2>
+        </div>
+        <div class="cube">
+            <audio src="./assets/music/sport.mp3">Sport</audio>
+            <h2>Sport</h2>
+        </div>
+        <div class="cube">
+            <audio src="./assets/music/stomp.mp3">Stomp</audio>
+            <h2>Stomp</h2>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
